--- a/main.css
+++ b/main.css
@@ -122,6 +122,7 @@ footer {
   padding-bottom: 0.5rem;
 }
 
+
 .gridfoot a {
   text-decoration: none;
   color: black;
@@ -242,23 +243,6 @@ main section p {
   padding: 0;
 }
 
-/*#tienda {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 2rem;
-  justify-items: stretch;
-  justify-content: space-around;
-  align-items: stretch;
-  padding: 2rem;
-}
-
-.demostracion {
-  background-color: grey;
-  border-radius: 2rem;
-  padding: 1rem;
-  
-}
-*/
 #tienda {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -266,7 +250,12 @@ main section p {
   padding: 2rem;
  
 }
-
+#carroversifunciona{
+  text-align: center;
+  font-size: 4rem;
+  margin-top: 2.5rem;
+  font-family: 'Roboto';
+}
 .demostracion {
   background-color: grey;
   border-radius: 2rem;
